# zero-trust

./: .gitignore  AGENTS.md  BRANCH_NOTES.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  RELEASE_PROCESS.md  TODO.md  docker-compose.yml
.github/workflows/: release-agent-rs.yml  release-connector-rs.yml
agent/: build.sh  config.yaml  go.mod  go.sum  main.go
agent/client/: mtls.go  reconnect.go  stream_handler.go
agent/config/: config.go
agent/enforcer/: firewall.go  firewall_iptables.go.backup  tun.go
agent/state/: state.go
apps/frontend/: package-lock.json  vite.config.ts
apps/frontend/lib/: data.ts  db.ts  jwt.ts  mock-api.ts  proxy.ts  types.ts
apps/frontend/server/: index.ts
apps/frontend/src/: App.tsx
docs/: architecture.md  development.md
scripts/: agent-setup.sh  clear-data.sh  init-db.sql  install-connector.sh  install-tunneler.sh  install.sh  setup-db.sh  setup.sh  uninstall-agent.sh  uninstall-connector.sh  uninstall-tunneler.sh
services/agent/: Cargo.toml  build.rs  plan.md  todo.md
services/agent/.cargo/: config.toml
services/agent/src/: config.rs  enroll.rs  firewall.rs  main.rs  persistence.rs  renewal.rs  run.rs
services/agent/src/proto/: controller.v1.rs
services/agent/src/tls/: cert_store.rs  client_cfg.rs  mod.rs  spiffe.rs
services/connector/: Cargo.toml  build.rs  run.md
services/controller/: .air.toml  .env  .env.example  RUN.md  controller.db-shm  controller.db-wal  go.mod  go.sum  main.go  run-air.sh  setup.sh
services/ztna-client/: Cargo.toml
services/ztna-client/src/: acl.rs  auth.rs  config.rs  main.rs  server.rs  socks5.rs  token_store.rs  tokens.rs  tunnel.rs
shared/configs/: .env.example
systemd/: agent.service  connector.service  tunneler.service
(+140 files in other folders)
