[package]
name = "agent-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
tonic        = { version = "0.12", features = ["tls", "tls-roots"] }
prost        = "0.13"
rustls       = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-webpki = { version = "0.103", default-features = false, features = ["ring", "alloc"] }
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["net"] }
hyper-util   = { version = "0.1", features = ["tokio"] }
tower        = { version = "0.5" }
http         = "1"
x509-parser  = "0.16"
p256         = { version = "0.13", features = ["ecdsa", "pkcs8"] }
clap         = { version = "4", features = ["derive"] }
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pem          = "3"
rand         = "0.8"
zeroize      = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
hostname     = "0.4"

[build-dependencies]
tonic-build = "0.12"
