[package]
name = "ztna-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ztna-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5"
